# forager-ai

./: .gitignore  CLAUDE.md  DESIGN.md  Forager_Dev_Suite.spec  README.md  clean_dashboard.ps1  dashboard.py  dashboard_clean.py  fix_metadata.py  mod_architect.py  pyproject.toml  run_dashboard.py
docs/: PRODUCT_ROADMAP.md  cursor-design-mode-agents-window.md  lovable-cursor-workflow.md  ui-approvals-first-mock.md  ui-redesign-audit.md  ui-review-rubric.md
scripts/: build_forager_exe.ps1  forager_verification_loop.py  launch_dashboard_chrome.ps1  open_dashboard_chrome.ps1  playwright_dashboard_smoke.js  verify_mod_catalog_apis.py
static/: forager-dashboard-chrome-preview.html
streamlit_metadata/: RECORD
tests/: test_ai_power_features.py  test_artwork_discovery.py  test_authoring_memory.py  test_batch1_context.py  test_batch2_context.py  test_batch3_context.py  test_batch4_context.py  test_compat_factory.py  test_compat_research.py  test_conflict_auto_apply.py  test_conflict_scan.py  test_council_abort.py  test_enhancements.py  test_feature_plan_patch.py  test_hub_citations.py  test_hub_reference_diff.py  test_install_provenance.py  test_instance_matrix.py  test_instance_preflight.py  test_jvm_heap_presets.py  test_launch_log_signals.py  test_launcher_ai_defaults_migration.py  test_live_block_preview.py  test_mc_model_mesh.py  test_mc_model_resolve.py  test_mob_scaffold.py  test_mod_catalog_network_smoke.py  test_mod_downloader.py  test_mod_foundry.py  test_mods_folder_lockfile.py  test_openrouter_sse.py  test_pack_health_beginner_copy.py  test_roadmap_extras.py  (+7 more)
(+126 files in other folders)
