[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "forager-ai"
version = "0.0.0"
description = "Forager AI Minecraft modpack helper (launcher + dashboard)"
requires-python = ">=3.10"
dependencies = [
    "tomli>=2.0.1; python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
